add parcel, rename main page to be 'index.html'
simplify prototype, matching typical entty point 'index.html'

--- a/_website/package.json
+++ b/_website/package.json
@@ -5,5 +5,8 @@
     "main": "index.html",
     "repository": "https://github.com/ultrasaurus/text-based-audio",
     "author": "",
-    "license": ""
+    "license": "",
+    "dependencies": {
+        "parcel": "^2.11.0"
+    }
 }
